# streamline-cli

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  rust-toolchain.toml  shell.nix
.github/workflows/: build-tarball.yml
scripts/: build.sh  docs.sh  format.sh  schema.sh  update_network.sh
scripts/awk/: append-codegen.awk  format-types.awk  module-format.awk
scripts/awk/graphql/: create_schema.awk  entities.awk  function_calls.awk
src/: main.rs  utils.rs
src/commands/: add.rs  build.rs  install.rs  list.rs  mod.rs  schema.rs
